--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
     "name": "@u-clarkdeveloper/ssm-document-converter",
-    "version": "0.0.1"
+    "version": "0.0.1",
+    "description": "Converts AWS SSM document exported from CLI to JSON",
+    "license": "MIT",
+    "homepage": "https://github.com/u-clarkdeveloper/ssm-document-converter#readme",
+    "repository": "u-clarkdeveloper/ssm-document-converter",
+    "engines": {
+        "node": ">=8"
+    },
+    "preferGlobal": true,
+    "keywords": [
+        "AWS",
+        "SSM",
+        "System Manager",
+        "document",
+        "convert"
+    ]
 }
